--- a/package.json
+++ b/package.json
@@ -5,9 +5,16 @@
   "main": "index.js",
   "author": "SeungWon Lee",
   "dependencies": {
+    "@babel/core": "^7.12.3",
+    "@babel/node": "^7.12.1",
+    "@babel/preset-env": "^7.12.1",
+    "core-js": "^3.6.5",
     "express": "^4.17.1"
   },
-  "scripts":{
-    "start": "node index.js"
+  "scripts": {
+    "start": "nodemon --exec babel-node index.js --delay 2"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.6"
   }
-}
+} 
