--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "@babel/node": "^7.12.1",
     "@babel/preset-env": "^7.12.1",
     "core-js": "^3.6.5",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "helmet": "^4.2.0",
+    "morgan": "^1.10.0"
   },
   "scripts": {
     "start": "nodemon --exec babel-node index.js --delay 2"
@@ -17,4 +19,4 @@
   "devDependencies": {
     "nodemon": "^2.0.6"
   }
-} 
+}
