--- a/package.json
+++ b/package.json
@@ -13,13 +13,14 @@
     "core-js": "^3.6.5",
     "express": "^4.17.1",
     "helmet": "^4.2.0",
-    "morgan": "^1.10.0",
-    "pug": "^3.0.0"
+    "jade": "^1.11.0",
+    "morgan": "^1.10.0"
   },
   "scripts": {
     "start": "nodemon --exec babel-node init.js --delay 2"
   },
   "devDependencies": {
-    "nodemon": "^2.0.6"
+    "nodemon": "^2.0.6",
+    "pug": "^3.0.0"
   }
 }
