--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^4.17.1",
     "helmet": "^4.2.0",
     "jade": "^1.11.0",
+    "mongoose": "^5.10.14",
     "morgan": "^1.10.0"
   },
   "scripts": {
