--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "helmet": "^4.2.0",
     "jade": "^1.11.0",
     "mongoose": "^5.10.14",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "multer": "^1.4.2"
   },
   "scripts": {
     "start": "nodemon --exec babel-node init.js --delay 2"
