--- a/package.json
+++ b/package.json
@@ -1,29 +1,42 @@
 {
-  "name": "streamertimes",
+  "name": "StreamerTimes",
   "version": "1.0.0",
   "description": "Project with Vanilla and NodeJS",
-  "main": "index.js",
   "author": "SeungWon Lee",
   "dependencies": {
-    "@babel/core": "^7.12.3",
-    "@babel/node": "^7.12.1",
-    "@babel/preset-env": "^7.12.1",
-    "body-parser": "^1.19.0",
-    "cookie-parser": "^1.4.5",
-    "core-js": "^3.6.5",
-    "dotenv": "^8.2.0",
-    "express": "^4.17.1",
-    "helmet": "^4.2.0",
-    "jade": "^1.11.0",
-    "mongoose": "^5.10.14",
-    "morgan": "^1.10.0",
-    "multer": "^1.4.2"
+    "@babel/core": "^7.1.5",
+    "@babel/node": "^7.0.0",
+    "@babel/preset-env": "^7.1.5",
+    "autoprefixer": "^10.0.2",
+    "body-parser": "^1.18.3",
+    "cookie-parser": "^1.4.3",
+    "css-loader": "^1.0.1",
+    "dotenv": "^6.1.0",
+    "express": "^4.16.4",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "helmet": "^3.15.0",
+    "mongoose": "^5.3.12",
+    "morgan": "^1.9.1",
+    "multer": "^1.4.1",
+    "node-sass": "^5.0.0",
+    "postcss-loader": "^4.0.4",
+    "pug": "^2.0.3",
+    "sass-loader": "^7.1.0",
+    "webpack": "^4.44.2",
+    "webpack-cli": "^4.2.0"
   },
   "scripts": {
-    "start": "nodemon --exec babel-node init.js --delay 2"
+    "dev:server": "nodemon --exec babel-node init.js --delay 2",
+    "dev:assets": "WEBPACK_ENV=development webpack",
+    "build:assets": "WEBPACK_ENV=production webpack"
   },
   "devDependencies": {
-    "nodemon": "^2.0.6",
-    "pug": "^3.0.0"
+    "eslint": "^5.16.0",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-config-prettier": "^3.6.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-prettier": "^3.1.4",
+    "nodemon": "^1.18.6",
+    "prettier": "^1.19.1"
   }
 }
