--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "StreamerTimes",
+  "name": "streamer-times",
   "version": "1.0.0",
   "description": "Project with Vanilla and NodeJS",
   "author": "SeungWon Lee",
@@ -19,16 +19,15 @@
     "mongoose": "^5.3.12",
     "morgan": "^1.9.1",
     "multer": "^1.4.1",
-    "node-sass": "^5.0.0",
+    "node-sass": "^4.14.1",
     "postcss-loader": "^4.0.4",
     "pug": "^2.0.3",
     "sass-loader": "^7.1.0",
-    "webpack": "^4.44.2",
-    "webpack-cli": "^4.2.0"
+    "webpack": "^4.36.1"
   },
   "scripts": {
     "dev:server": "nodemon --exec babel-node init.js --delay 2",
-    "dev:assets": "WEBPACK_ENV=development webpack",
+    "dev:assets": "cross-env WEBPACK_ENV=development webpack",
     "build:assets": "cross-env WEBPACK_ENV=production webpack"
   },
   "devDependencies": {
@@ -37,7 +36,9 @@
     "eslint-config-prettier": "^3.6.0",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-prettier": "^3.1.4",
+    "mini-css-extract-plugin": "^1.3.1",
     "nodemon": "^1.18.6",
-    "prettier": "^1.19.1"
+    "prettier": "^1.19.1",
+    "webpack-cli": "^4.2.0"
   }
 }
