--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
   "dependencies": {
     "@babel/core": "^7.1.5",
     "@babel/node": "^7.0.0",
+    "@babel/polyfill": "^7.12.1",
     "@babel/preset-env": "^7.1.5",
     "autoprefixer": "^10.0.2",
+    "babel-loader": "^8.2.2",
     "body-parser": "^1.18.3",
     "cookie-parser": "^1.4.3",
     "cross-env": "^7.0.2",
@@ -27,7 +29,7 @@
   },
   "scripts": {
     "dev:server": "nodemon --exec babel-node init.js --delay 2",
-    "dev:assets": "cross-env WEBPACK_ENV=development webpack",
+    "dev:assets": "cross-env WEBPACK_ENV=development webpack -w",
     "build:assets": "cross-env WEBPACK_ENV=production webpack"
   },
   "devDependencies": {
