--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "@babel/node": "^7.0.0",
     "@babel/polyfill": "^7.12.1",
     "@babel/preset-env": "^7.1.5",
-    "autoprefixer": "^10.0.2",
+    "autoprefixer": "^9.0.0",
     "babel-loader": "^8.2.2",
     "body-parser": "^1.18.3",
     "cookie-parser": "^1.4.3",
@@ -22,7 +22,7 @@
     "morgan": "^1.9.1",
     "multer": "^1.4.1",
     "node-sass": "^4.14.1",
-    "postcss-loader": "^4.0.4",
+    "postcss-cli": "^8.3.0",
     "pug": "^2.0.3",
     "sass-loader": "^7.1.0",
     "webpack": "^4.36.1"
@@ -40,6 +40,7 @@
     "eslint-plugin-prettier": "^3.1.4",
     "mini-css-extract-plugin": "^1.3.1",
     "nodemon": "^1.18.6",
+    "postcss-loader": "^3.0.0",
     "prettier": "^1.19.1",
     "webpack-cli": "^4.2.0"
   }
