--- a/package.json
+++ b/package.json
@@ -1,3 +1,4 @@
+
 {
   "name": "streamer-times",
   "version": "1.0.0",
@@ -7,7 +8,7 @@
     "@babel/core": "^7.1.5",
     "@babel/node": "^7.0.0",
     "@babel/polyfill": "^7.12.1",
-    "@babel/preset-env": "^7.1.5",
+    "@babel/preset-env": "^7.12.7",
     "autoprefixer": "^9.0.0",
     "babel-loader": "^8.2.2",
     "body-parser": "^1.18.3",
@@ -22,6 +23,8 @@
     "morgan": "^1.9.1",
     "multer": "^1.4.1",
     "node-sass": "^4.14.1",
+    "passport": "^0.4.1",
+    "passport-local-mongoose": "^6.0.1",
     "postcss-cli": "^8.3.0",
     "pug": "^2.0.3",
     "sass-loader": "^7.1.0",
