--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "streamer-times",
   "version": "1.0.0",
@@ -12,11 +11,13 @@
     "autoprefixer": "^9.0.0",
     "babel-loader": "^8.2.2",
     "body-parser": "^1.18.3",
+    "connect-mongo": "^3.2.0",
     "cookie-parser": "^1.4.3",
     "cross-env": "^7.0.2",
     "css-loader": "^1.0.1",
     "dotenv": "^6.1.0",
     "express": "^4.16.4",
+    "express-session": "^1.17.1",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "helmet": "^3.15.0",
     "mongoose": "^5.3.12",
