--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "multer": "^1.4.1",
     "node-sass": "^4.14.1",
     "passport": "^0.4.1",
+    "passport-github": "^1.1.0",
     "passport-local-mongoose": "^6.0.1",
     "postcss-cli": "^8.3.0",
     "pug": "^2.0.3",
